// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dashboard Form testCases should match the snapshot 1`] = `ReactWrapper {}`;

exports[`Dashboard form reducer should handle Get PROJECT DASHBOARD GRID DETAILS successfully 1`] = `
Object {
  "actionApprovalDetails": undefined,
  "error": null,
  "loading": false,
}
`;

exports[`Dashboard form reducer should handle Get RESET DASHBOARD STATE successfully 1`] = `
Object {
  "actionApprovalDetails": Array [],
  "error": null,
}
`;

exports[`Dashboard form reducer should handle PROJECT DASHBOARD GRID ERROR successfully 1`] = `
Object {
  "actionApprovalDetails": Array [],
  "error": undefined,
  "loading": false,
  "notify": 2,
}
`;
